# manifests

./: .gitignore  README.md  benchmark_test.go  go.mod  go.sum  imports.go  manifests.go  manifests_test.go  npm_test.go
.github/workflows/: ci.yml
internal/alpine/: alpine.go  alpine_test.go
internal/arch/: arch.go  arch_test.go
internal/asdf/: asdf.go  asdf_test.go
internal/bazel/: bazel.go  bazel_test.go
internal/brew/: brew.go  brew_test.go
internal/cargo/: cargo.go  cargo_test.go
internal/carthage/: carthage.go  carthage_test.go
internal/clojure/: clojure.go  clojure_test.go
internal/cocoapods/: cocoapods.go  cocoapods_test.go
internal/composer/: composer.go  composer_test.go
internal/conan/: conan.go  conan_test.go
internal/conda/: conda.go  conda_test.go
internal/core/: helpers.go  registry.go  types.go
internal/cpan/: cpan.go  cpan_test.go
internal/cran/: cran.go  cran_test.go
internal/crystal/: crystal.go  crystal_test.go
internal/docker/: docker.go  docker_test.go
internal/dub/: dub.go  dub_test.go
internal/elm/: elm.go  elm_test.go
internal/gem/: gem_test.go  rubygems.go
internal/git/: git.go  git_test.go
internal/github_actions/: github_actions.go  github_actions_test.go
internal/gleam/: gleam.go  gleam_test.go
internal/golang/: golang.go  golang_test.go  legacy.go
internal/guix/: guix.go  guix_test.go
internal/hackage/: hackage.go  hackage_test.go
internal/haxelib/: haxelib.go  haxelib_test.go
internal/hex/: hex.go  hex_test.go
internal/ips/: ips.go  (+1 more)
testdata/pypi/pep621-optional/: pyproject.toml
(+83 files in other folders)
